fixed sqlalchemy version, edited airflow dag script

--- a/spotipy.ipynb
+++ b/spotipy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,28 @@
     "import pandas as pd\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "import datetime \n",
-    "import time\n"
+    "import time\n",
+    "from datetime import timedelta\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(seconds=300)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timedelta(minutes=5)"
    ]
   },
   {
@@ -24,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,247 +163,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True: \n",
-    "    empty = []\n",
-    "    auth_manager, spotify = refresh_spotify(auth_manager, spotify)\n",
-    "    data = spotify.current_user_recently_played(after =yesterday_unix_timestamp)\n",
-    "    if data['items'] != []:\n",
-    "        empty.append(data['items'][0]['track'])\n",
-    "        break \n",
-    "    else:\n",
-    "        print('Nothing is playing.')\n",
-    "\n",
-    "    # time.sleep(30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artist_name = []\n",
-    "song_names = []\n",
-    "played_at_list = []\n",
-    "timestamps = []\n",
-    "\n",
-    "for i in data['items']:\n",
-    "    song_names.append(i['track']['name'])\n",
-    "    played_at_list.append(i['played_at'])\n",
-    "    timestamps.append(i['played_at'][:10])\n",
-    "    artist_name.append(i['track']['artists'][0]['name'])\n",
-    "\n",
-    "song_df = pd.DataFrame([played_at_list,timestamps,artist_name,song_names]).T\n",
-    "song_df.columns = ['played_at_list','timestamps','artist_name','song_names']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>played_at_list</th>\n",
-       "      <th>timestamps</th>\n",
-       "      <th>artist_name</th>\n",
-       "      <th>song_names</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-10-15T01:00:51.534Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Oatmello</td>\n",
-       "      <td>Community</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-10-15T00:59:20.369Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Vincent Rayn</td>\n",
-       "      <td>Garden</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-10-15T00:57:45.142Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>kyoshi</td>\n",
-       "      <td>balcony</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-10-15T00:55:49.691Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Moonspatz</td>\n",
-       "      <td>A Man Who Believed in Dreams</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-10-15T00:54:15.290Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Saiko</td>\n",
-       "      <td>Second Chance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2022-10-15T00:52:22.560Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Oaty.</td>\n",
-       "      <td>Concrete Jungle</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2022-10-15T00:50:35.572Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Mike Gusavo</td>\n",
-       "      <td>More Than This</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2022-10-15T00:48:27.725Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Ramsey Road</td>\n",
-       "      <td>Relax Still</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2022-10-15T00:45:49.838Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>SōNE</td>\n",
-       "      <td>Halfway There</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2022-10-15T00:43:56.325Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Sepalot</td>\n",
-       "      <td>Dream Chaser</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2022-10-15T00:42:37.451Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Prigida</td>\n",
-       "      <td>Jelly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2022-10-15T00:40:23.407Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Moderator</td>\n",
-       "      <td>Rainmaker</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2022-10-15T00:37:25.879Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Gold Coast Microscopes</td>\n",
-       "      <td>Poolside</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2022-10-15T00:36:00.716Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Miso Colt</td>\n",
-       "      <td>Elevator Rendezvous</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2022-10-15T00:33:04.280Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>Sto Nii</td>\n",
-       "      <td>love Downpitch</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2022-10-15T00:31:19.906Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>yosev</td>\n",
-       "      <td>Saguaro</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2022-10-15T00:29:20.353Z</td>\n",
-       "      <td>2022-10-15</td>\n",
-       "      <td>eau n!ce</td>\n",
-       "      <td>The Tides</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              played_at_list  timestamps             artist_name  \\\n",
-       "0   2022-10-15T01:00:51.534Z  2022-10-15                Oatmello   \n",
-       "1   2022-10-15T00:59:20.369Z  2022-10-15            Vincent Rayn   \n",
-       "2   2022-10-15T00:57:45.142Z  2022-10-15                  kyoshi   \n",
-       "3   2022-10-15T00:55:49.691Z  2022-10-15               Moonspatz   \n",
-       "4   2022-10-15T00:54:15.290Z  2022-10-15                   Saiko   \n",
-       "5   2022-10-15T00:52:22.560Z  2022-10-15                   Oaty.   \n",
-       "6   2022-10-15T00:50:35.572Z  2022-10-15             Mike Gusavo   \n",
-       "7   2022-10-15T00:48:27.725Z  2022-10-15             Ramsey Road   \n",
-       "8   2022-10-15T00:45:49.838Z  2022-10-15                    SōNE   \n",
-       "9   2022-10-15T00:43:56.325Z  2022-10-15                 Sepalot   \n",
-       "10  2022-10-15T00:42:37.451Z  2022-10-15                 Prigida   \n",
-       "11  2022-10-15T00:40:23.407Z  2022-10-15               Moderator   \n",
-       "12  2022-10-15T00:37:25.879Z  2022-10-15  Gold Coast Microscopes   \n",
-       "13  2022-10-15T00:36:00.716Z  2022-10-15               Miso Colt   \n",
-       "14  2022-10-15T00:33:04.280Z  2022-10-15                 Sto Nii   \n",
-       "15  2022-10-15T00:31:19.906Z  2022-10-15                   yosev   \n",
-       "16  2022-10-15T00:29:20.353Z  2022-10-15                eau n!ce   \n",
-       "\n",
-       "                      song_names  \n",
-       "0                      Community  \n",
-       "1                         Garden  \n",
-       "2                        balcony  \n",
-       "3   A Man Who Believed in Dreams  \n",
-       "4                  Second Chance  \n",
-       "5                Concrete Jungle  \n",
-       "6                 More Than This  \n",
-       "7                    Relax Still  \n",
-       "8                  Halfway There  \n",
-       "9                   Dream Chaser  \n",
-       "10                         Jelly  \n",
-       "11                     Rainmaker  \n",
-       "12                      Poolside  \n",
-       "13           Elevator Rendezvous  \n",
-       "14                love Downpitch  \n",
-       "15                       Saguaro  \n",
-       "16                     The Tides  "
+       "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "song_df"
+    "data['items']!=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              played_at_list  timestamps     artist_name  \\\n",
+      "0   2022-10-20T00:27:33.006Z  2022-10-20      Conan Gray   \n",
+      "1   2022-10-20T00:23:26.600Z  2022-10-20       Tom Odell   \n",
+      "2   2022-10-20T00:19:22.181Z  2022-10-20    Taylor Swift   \n",
+      "3   2022-10-20T00:15:35.890Z  2022-10-20      Dean Lewis   \n",
+      "4   2022-10-20T00:12:51.942Z  2022-10-20  Olivia Rodrigo   \n",
+      "5   2022-10-20T00:10:07.842Z  2022-10-20           Lorde   \n",
+      "6   2022-10-20T00:07:15.403Z  2022-10-20   Gracie Abrams   \n",
+      "7   2022-10-20T00:04:09.389Z  2022-10-20        Coldplay   \n",
+      "8   2022-10-20T00:00:22.225Z  2022-10-20  Lizzy McAlpine   \n",
+      "9   2022-10-19T23:57:18.309Z  2022-10-19     Niall Horan   \n",
+      "10  2022-10-19T23:53:00.162Z  2022-10-19    Taylor Swift   \n",
+      "11  2022-10-19T23:49:27.596Z  2022-10-19   Gracie Abrams   \n",
+      "\n",
+      "                      song_names  \n",
+      "0                      Astronomy  \n",
+      "1                   Another Love  \n",
+      "2                       dorothea  \n",
+      "3           How Do I Say Goodbye  \n",
+      "4   1 step forward, 3 steps back  \n",
+      "5                      Liability  \n",
+      "6                             21  \n",
+      "7                         Sparks  \n",
+      "8                       ceilings  \n",
+      "9                        Flicker  \n",
+      "10       the lakes - bonus track  \n",
+      "11                     Difficult  \n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "        auth_manager, spotify = refresh_spotify(auth_manager, spotify)\n",
+    "        data = spotify.current_user_recently_played(after =yesterday_unix_timestamp)\n",
+    "\n",
+    "        try:\n",
+    "            # if python not equals to zero \n",
+    "            if data['items'] != []:\n",
+    "                artist_name = []\n",
+    "                song_names = []\n",
+    "                played_at_list = []\n",
+    "                timestamps = []         \n",
+    "                for i in data['items']:\n",
+    "                    song_names.append(i['track']['name'])\n",
+    "                    played_at_list.append(i['played_at'])\n",
+    "                    timestamps.append(i['played_at'][:10])\n",
+    "                    artist_name.append(i['track']['artists'][0]['name'])            \n",
+    "                # data is in dataframe format now\n",
+    "                songs_table = pd.DataFrame([played_at_list,timestamps,artist_name,song_names]).T\n",
+    "                songs_table.columns = ['played_at_list','timestamps','artist_name','song_names']            \n",
+    "\n",
+    "                # update database\n",
+    "                # update_database(DB_LOCATION,songs_table)\n",
+    "                print(songs_table)\n",
+    "\n",
+    "                # once you updated the database, break out of the loop\n",
+    "                break\n",
+    "            # if there are no data that day, don't even open up the database, skip that day    \n",
+    "            else:\n",
+    "                print(\"No songs played yesterday\")\n",
+    "                # if there are no songs, break out \n",
+    "                break \n",
+    "        except:\n",
+    "            print(\"Error with database or spotify data returned\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = sqlalchemy.create_engine('postgresql://dev:pandaburp94*@localhost:5433/postgres')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fa98f2fcd30>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    sql_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS james_played_tracks(\n",
+    "        played_at_list VARCHAR(200), \n",
+    "        timestamps VARCHAR(200),\n",
+    "        artist_name VARCHAR(200), \n",
+    "        song_names VARCHAR(200),\n",
+    "        CONSTRAINT primary_key_constraint PRIMARY KEY (played_at_list)\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "    engine.execute(sql_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "songs_table.to_sql(name = 'james_played_tracks',con = engine, if_exists= 'append',index = False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
    ]
   }
  ],
