edited the check function to remove songs that are not from yesterday, and change the dataframe to json so it can be passed from task to task

--- a/spotipy.ipynb
+++ b/spotipy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,14 @@
     "        yesterday = yesterday.replace(hour = 0,minute = 0,second =0,microsecond =0 )\n",
     "        timestamps = df['timestamps'].tolist()\n",
     "\n",
-    "        for timestamp in timestamps:\n",
-    "            # strptime --> converts string to time\n",
-    "             # if we catch records that are not yesterday, we want the pipeline to raise exception \n",
-    "            if datetime.strptime(timestamp,\"%Y-%m-%d\")!= yesterday:\n",
-    "                raise Exception(\"At least one of the songs does not come within last 24 hours\")\n",
-    "        return True"
+    "        df = df[df['timestamps']== yesterday.strftime(\"%Y-%m-%d\")]\n",
+    "\n",
+    "        # for timestamp in timestamps:\n",
+    "        #     # strptime --> converts string to time\n",
+    "        #      # if we catch records that are not yesterday, we want the pipeline to raise exception \n",
+    "        #     if datetime.strptime(timestamp,\"%Y-%m-%d\")!= yesterday:\n",
+    "        #         raise Exception(\"At least one of the songs does not come within last 24 hours\")\n",
+    "        return df"
    ]
   },
   {
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +93,7 @@
        "['/home/maxong/spotify_airflow/configuration/config.ini']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1666540800000"
+       "1667318400000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-10-25'"
+       "'2022-11-03'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,16 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-10-25'"
+       "'2022-11-03'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,20 +291,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             played_at_list  timestamps      artist_name  \\\n",
-      "0  2022-10-24T15:06:30.612Z  2022-10-24  Hillsong UNITED   \n",
-      "1  2022-10-24T12:27:41.508Z  2022-10-24   Olivia Rodrigo   \n",
+      "              played_at_list  timestamps       artist_name  \\\n",
+      "0   2022-11-02T23:59:41.934Z  2022-11-02        Tori Kelly   \n",
+      "1   2022-11-02T13:44:20.023Z  2022-11-02        Tori Kelly   \n",
+      "2   2022-11-02T13:42:46.017Z  2022-11-02        Tori Kelly   \n",
+      "3   2022-11-02T13:39:25.205Z  2022-11-02        Tori Kelly   \n",
+      "4   2022-11-02T13:36:06.714Z  2022-11-02        Tori Kelly   \n",
+      "5   2022-11-02T13:32:57.160Z  2022-11-02        Tori Kelly   \n",
+      "6   2022-11-02T13:29:48.170Z  2022-11-02     Taron Egerton   \n",
+      "7   2022-11-02T13:21:30.566Z  2022-11-02        Tori Kelly   \n",
+      "8   2022-11-02T00:35:25.667Z  2022-11-02  Carly Rae Jepsen   \n",
+      "9   2022-11-02T00:32:12.899Z  2022-11-02  Carly Rae Jepsen   \n",
+      "10  2022-11-02T00:28:26.014Z  2022-11-02  Carly Rae Jepsen   \n",
+      "11  2022-11-02T00:24:47.013Z  2022-11-02  Carly Rae Jepsen   \n",
+      "12  2022-11-02T00:10:07.360Z  2022-11-02  Carly Rae Jepsen   \n",
+      "13  2022-11-02T00:09:26.041Z  2022-11-02  Carly Rae Jepsen   \n",
+      "14  2022-11-02T00:06:10.076Z  2022-11-02  Carly Rae Jepsen   \n",
+      "15  2022-11-02T00:03:41.138Z  2022-11-02  Carly Rae Jepsen   \n",
+      "16  2022-11-02T00:01:25.059Z  2022-11-02  Carly Rae Jepsen   \n",
+      "17  2022-11-01T23:58:25.070Z  2022-11-01  Carly Rae Jepsen   \n",
+      "18  2022-11-01T23:55:32.007Z  2022-11-01  Carly Rae Jepsen   \n",
+      "19  2022-11-01T23:53:02.023Z  2022-11-01  Carly Rae Jepsen   \n",
       "\n",
-      "                                song_names  \n",
-      "0  Oceans (Where Feet May Fail) - Acoustic  \n",
-      "1             1 step forward, 3 steps back  \n"
+      "                                           song_names  \n",
+      "0   Where the Streets Have No Name (with Taron Ege...  \n",
+      "1   Where the Streets Have No Name (with Taron Ege...  \n",
+      "2                                        Paper Hearts  \n",
+      "3                                         Dear No One  \n",
+      "4   Let's Go Crazy (with Taron Egerton, Reese With...  \n",
+      "5                           I Was Made For Loving You  \n",
+      "6   There's Nothing Holdin' Me Back (with Tori Kelly)  \n",
+      "7      I Say A Little Prayer (with Pharrell Williams)  \n",
+      "8                                       Shooting Star  \n",
+      "9                                     Bad Thing Twice  \n",
+      "10                                            So Nice  \n",
+      "11                                       Western Wind  \n",
+      "12                                       Western Wind  \n",
+      "13                                              Bends  \n",
+      "14                                        Beach House  \n",
+      "15                                           Sideways  \n",
+      "16                                           Far Away  \n",
+      "17                                Talking to Yourself  \n",
+      "18                                        Joshua Tree  \n",
+      "19                                 Surrender My Heart  \n"
      ]
     }
    ],
@@ -345,7 +383,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-11-02'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -378,39 +434,181 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-10-24T15:06:30.612Z</td>\n",
-       "      <td>2022-10-24</td>\n",
-       "      <td>Hillsong UNITED</td>\n",
-       "      <td>Oceans (Where Feet May Fail) - Acoustic</td>\n",
+       "      <td>2022-11-02T23:59:41.934Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Tori Kelly</td>\n",
+       "      <td>Where the Streets Have No Name (with Taron Ege...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-10-24T12:27:41.508Z</td>\n",
-       "      <td>2022-10-24</td>\n",
-       "      <td>Olivia Rodrigo</td>\n",
-       "      <td>1 step forward, 3 steps back</td>\n",
+       "      <td>2022-11-02T13:44:20.023Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Tori Kelly</td>\n",
+       "      <td>Where the Streets Have No Name (with Taron Ege...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-11-02T13:42:46.017Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Tori Kelly</td>\n",
+       "      <td>Paper Hearts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-11-02T13:39:25.205Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Tori Kelly</td>\n",
+       "      <td>Dear No One</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-11-02T13:36:06.714Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Tori Kelly</td>\n",
+       "      <td>Let's Go Crazy (with Taron Egerton, Reese With...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2022-11-02T13:32:57.160Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Tori Kelly</td>\n",
+       "      <td>I Was Made For Loving You</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2022-11-02T13:29:48.170Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Taron Egerton</td>\n",
+       "      <td>There's Nothing Holdin' Me Back (with Tori Kelly)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2022-11-02T13:21:30.566Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Tori Kelly</td>\n",
+       "      <td>I Say A Little Prayer (with Pharrell Williams)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2022-11-02T00:35:25.667Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Shooting Star</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2022-11-02T00:32:12.899Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Bad Thing Twice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2022-11-02T00:28:26.014Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>So Nice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2022-11-02T00:24:47.013Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Western Wind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2022-11-02T00:10:07.360Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Western Wind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2022-11-02T00:09:26.041Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Bends</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2022-11-02T00:06:10.076Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Beach House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2022-11-02T00:03:41.138Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Sideways</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2022-11-02T00:01:25.059Z</td>\n",
+       "      <td>2022-11-02</td>\n",
+       "      <td>Carly Rae Jepsen</td>\n",
+       "      <td>Far Away</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             played_at_list  timestamps      artist_name  \\\n",
-       "0  2022-10-24T15:06:30.612Z  2022-10-24  Hillsong UNITED   \n",
-       "1  2022-10-24T12:27:41.508Z  2022-10-24   Olivia Rodrigo   \n",
+       "              played_at_list  timestamps       artist_name  \\\n",
+       "0   2022-11-02T23:59:41.934Z  2022-11-02        Tori Kelly   \n",
+       "1   2022-11-02T13:44:20.023Z  2022-11-02        Tori Kelly   \n",
+       "2   2022-11-02T13:42:46.017Z  2022-11-02        Tori Kelly   \n",
+       "3   2022-11-02T13:39:25.205Z  2022-11-02        Tori Kelly   \n",
+       "4   2022-11-02T13:36:06.714Z  2022-11-02        Tori Kelly   \n",
+       "5   2022-11-02T13:32:57.160Z  2022-11-02        Tori Kelly   \n",
+       "6   2022-11-02T13:29:48.170Z  2022-11-02     Taron Egerton   \n",
+       "7   2022-11-02T13:21:30.566Z  2022-11-02        Tori Kelly   \n",
+       "8   2022-11-02T00:35:25.667Z  2022-11-02  Carly Rae Jepsen   \n",
+       "9   2022-11-02T00:32:12.899Z  2022-11-02  Carly Rae Jepsen   \n",
+       "10  2022-11-02T00:28:26.014Z  2022-11-02  Carly Rae Jepsen   \n",
+       "11  2022-11-02T00:24:47.013Z  2022-11-02  Carly Rae Jepsen   \n",
+       "12  2022-11-02T00:10:07.360Z  2022-11-02  Carly Rae Jepsen   \n",
+       "13  2022-11-02T00:09:26.041Z  2022-11-02  Carly Rae Jepsen   \n",
+       "14  2022-11-02T00:06:10.076Z  2022-11-02  Carly Rae Jepsen   \n",
+       "15  2022-11-02T00:03:41.138Z  2022-11-02  Carly Rae Jepsen   \n",
+       "16  2022-11-02T00:01:25.059Z  2022-11-02  Carly Rae Jepsen   \n",
        "\n",
-       "                                song_names  \n",
-       "0  Oceans (Where Feet May Fail) - Acoustic  \n",
-       "1             1 step forward, 3 steps back  "
+       "                                           song_names  \n",
+       "0   Where the Streets Have No Name (with Taron Ege...  \n",
+       "1   Where the Streets Have No Name (with Taron Ege...  \n",
+       "2                                        Paper Hearts  \n",
+       "3                                         Dear No One  \n",
+       "4   Let's Go Crazy (with Taron Egerton, Reese With...  \n",
+       "5                           I Was Made For Loving You  \n",
+       "6   There's Nothing Holdin' Me Back (with Tori Kelly)  \n",
+       "7      I Say A Little Prayer (with Pharrell Williams)  \n",
+       "8                                       Shooting Star  \n",
+       "9                                     Bad Thing Twice  \n",
+       "10                                            So Nice  \n",
+       "11                                       Western Wind  \n",
+       "12                                       Western Wind  \n",
+       "13                                              Bends  \n",
+       "14                                        Beach House  \n",
+       "15                                           Sideways  \n",
+       "16                                           Far Away  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "songs_table"
+    "datetime.strptime(timestamp,\"%Y-%m-%d\")"
    ]
   },
   {
